--- a/AWSProject/index.html
+++ b/AWSProject/index.html
@@ -4,9 +4,12 @@
 <h1>Sample AWS Site</h1>
 <hr>
 <h2>
-Amazon Elastic Compute Cloude (EC2)<br>
-Amazon Simple Storage Service(S3)<br>
-Amazon Relational Database Service (RDS) <br>
-Amazon SQS
+<a href="C:\project\git\AWSTEST\AWSProject\ec2.html">
+Amazon Elastic Compute Cloude (EC2)</a><br>
+<a href="C:\project\git\AWSTEST\AWSProject\s3.html">
+Amazon Simple Storage Service(S3)</a><br>
+<a href="C:\project\git\AWSTEST\AWSProject\rds.html">
+Amazon Relational Database Service (RDS) </a><br>
+
 </h2>
 </html>
