--- a/AWSProject/rds.html
+++ b/AWSProject/rds.html
@@ -4,9 +4,10 @@
 <h1>Sample AWS Site</h1>
 <hr>
 <h2>
-Amazon Elastic Compute Cloude (EC2)<br>
-Amazon Simple Storage Service(S3)<br>
 Amazon Relational Database Service (RDS) <br>
-Amazon SQS
 </h2>
+<H3> This is RDS</h3>
+<br>
+
+<a href="C:\project\git\AWSTEST\AWSProject\index.html">Home</a>
 </html>
